--- a/training.ipynb
+++ b/training.ipynb
@@ -192,7 +192,7 @@
    "outputs": [],
    "source": [
     "seed = 123\n",
-    "n_episodes = 20"
+    "n_episodes = 10000"
    ]
   },
   {
@@ -214,14 +214,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "episode 20\t score: 0.0000\taverage: 0.0100"
+      "episode 100\t score: 0.0000\taverage: 0.0030\n",
+      "episode 200\t score: 0.0000\taverage: 0.0057\n",
+      "episode 300\t score: 0.0000\taverage: 0.0010\n",
+      "episode 400\t score: 0.0000\taverage: 0.0009\n",
+      "episode 500\t score: 0.0900\taverage: 0.0075\n",
+      "episode 600\t score: 0.0000\taverage: 0.0567\n",
+      "episode 700\t score: 0.0000\taverage: 0.0889\n",
+      "episode 800\t score: 0.1000\taverage: 0.1002\n",
+      "episode 900\t score: 0.0000\taverage: 0.0934\n",
+      "episode 1000\t score: 0.0000\taverage: 0.0648\n",
+      "episode 1100\t score: 0.1000\taverage: 0.0817\n",
+      "episode 1200\t score: 0.1000\taverage: 0.1164\n",
+      "episode 1300\t score: 0.1000\taverage: 0.1371\n",
+      "episode 1400\t score: 0.1000\taverage: 0.1092\n",
+      "episode 1500\t score: 0.0000\taverage: 0.1243\n",
+      "episode 1600\t score: 0.2000\taverage: 0.1386\n",
+      "episode 1700\t score: 0.2000\taverage: 0.1367\n",
+      "episode 1800\t score: 0.3000\taverage: 0.1741\n",
+      "episode 1900\t score: 0.2000\taverage: 0.1990\n",
+      "episode 2000\t score: 0.0000\taverage: 0.1636\n",
+      "episode 2100\t score: 0.1000\taverage: 0.1904\n",
+      "episode 2200\t score: 0.1000\taverage: 0.1692\n",
+      "episode 2300\t score: 0.1900\taverage: 0.1507\n",
+      "episode 2400\t score: 0.0900\taverage: 0.1504\n",
+      "episode 2500\t score: 0.0000\taverage: 0.1914\n",
+      "episode 2600\t score: 0.0000\taverage: 0.1966\n",
+      "episode 2700\t score: 0.1000\taverage: 0.2432\n",
+      "episode 2800\t score: 0.3000\taverage: 0.3711\n",
+      "episode 2845\t score: 2.4000\taverage: 0.5106\n",
+      "solved environment!\n",
+      "episode 2900\t score: 0.6000\taverage: 0.5699\n",
+      "episode 3000\t score: 0.3000\taverage: 0.2671\n",
+      "episode 3100\t score: 0.1000\taverage: 0.2922\n",
+      "episode 3200\t score: 0.5000\taverage: 0.3724\n",
+      "episode 3300\t score: 0.7000\taverage: 0.4009\n",
+      "episode 3400\t score: 0.5000\taverage: 0.2914\n",
+      "episode 3500\t score: 0.2000\taverage: 0.3072\n",
+      "episode 3600\t score: 0.1000\taverage: 0.4042\n",
+      "episode 3621\t score: 0.6000\taverage: 0.4222"
      ]
     }
    ],
@@ -292,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
